--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,14 +1,35 @@
 <ion-header>
-  <ion-navbar>
-    <ion-title>
-      Ionic Blank
-    </ion-title>
+  <ion-navbar class="youtube-player-header" dark>
+    <div id="player" class="embed-responsive embed-responsive-16by9" style="height:200px">
+      <div id="placeholder" style="width: 100%" class="embed-responsive-item"></div>
+      <div class="embed-responsive-item" style="width: 100%; z-index: 90; background-color: black; background: url('assets/imgs/cover.png'); background-size:cover;"
+        *ngIf="!onPlaying"></div>
+    </div>
   </ion-navbar>
 </ion-header>
 
-<ion-content padding>
-  The world is your oyster.
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
-  </p>
+<ion-content class="home">
+
+  <div *ngFor="let post of posts">
+
+    <ion-grid>
+      <ion-row (click)="playVideo($event, post)">
+        <ion-col>
+          <img src="{{post.snippet.thumbnails.medium.url}}">
+        </ion-col>
+        <ion-col>
+          <h2 class="item-text-wrap">{{post.snippet.title}}</h2>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-item actions>
+          <button primary clear item-right (click)="share()">
+            <ion-icon name='share'></ion-icon>
+          </button>
+        </ion-item>
+      </ion-row>
+    </ion-grid>
+  </div>
+  <button light>Load More...</button>
+
 </ion-content>
