Added user notifications on network changes

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-navbar class="youtube-player-header" dark>
-    <div id="player" class="embed-responsive embed-responsive-16by9" style="height:200px">
+    <div id="player" class="embed-responsive embed-responsive-16by9" style="height:200px;background-color: black;">
       <div id="placeholder" style="width: 100%" class="embed-responsive-item"></div>
       <div class="embed-responsive-item" style="width: 100%; z-index: 90; background-color: black; background: url('assets/imgs/cover.png'); background-size:cover;"
         *ngIf="!onPlaying"></div>
